--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -6,10 +6,10 @@ on:
       RECOVERY_URL:
         description: 'RECOVERY URL'
         required: true
-        default: 'https://transfer.sh/(RECOMMENDED)'
+        default: 'https://www.udrop.com/KqeF/recovery.img.lz4'
 
 env:
-  RECOVERY_URL: https://oshi.at/Rpjg
+  RECOVERY_URL: https://www.udrop.com/KqeF/recovery.img.lz4
 
 jobs:
   build:
